--- a/src/components/Task.astro
+++ b/src/components/Task.astro
@@ -1,38 +1,38 @@
 ---
-const { taskDescription } = Astro.props;
+const { taskDescription, index } = Astro.props;
 ---
 
-<div class="flex gap-2">
-  <input
-    type="checkbox"
-    id="checkbox"
-    class="relative peer shrink-0
-    appearance-none w-4 h-4 border-2 border-blue-500 rounded-full bg-white
-    mt-1"
-  />
-  <!-- <div class="flex items-center content-center bg-black">
-    <label class="flex items-center mix-blend-difference">Hello World </label>
-  </div> -->
-  <div class="flex items-center content-center bg-white">
-    <div class=" flex content-center mix-blend-difference bg-black h-px" id="strikethrough">
-        <label class="flex items-center text-white mix-blend-difference">{taskDescription}</label>
-    </div>
-</div>
-
-  <svg
-    class="absolute
-      w-4 h-4 mt-1
-      hidden peer-checked:block"
-    xmlns="http://www.w3.org/2000/svg"
-    viewBox="0 0 24 24"
-    fill="none"
-    stroke="currentColor"
-    stroke-width="4"
-    stroke-linecap="round"
-    stroke-linejoin="round"
-  >
-    <polyline points="20 6 9 17 4 12"></polyline>
-  </svg>
+<div class="flex items-center gap-2 h-10">
+    <input
+      type="checkbox"
+      id=`checkbox${index}`
+      onchange="checkboxChange(index)"
+      class="flex items-center content-center relative peer shrink-0
+    appearance-none w-6 h-6 border border-hint rounded-full bg-white"
+    />
+    <svg
+      class="absolute w-6 h-6 p-1 mt-0.5 text-selected
+      hidden peer-checked:block pointer-events-none"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="square"
+      stroke-linejoin="miter"
+    >
+      <polyline points="20 6 9 17 4 12"></polyline>
+    </svg>
+  <div class="flex items-center content-center bg-white h-full border border-red">
+    <div
+      class="flex mix-blend-difference bg-negativeHint h-px"
+      id="strikethrough"
+    >
+    <label class="flex items-center  text-negativeHint mix-blend-difference"
+      >{taskDescription}</label
+    >
+  </div>
+  </div>
 </div>
 
 
